<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.mateushideaki.videoaula.MainActivity">


    <Button
        android:id="@+id/btn_cadastrar_actMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_cadastrar" />

    <Button
        android:id="@+id/btn_listar_actMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_listar" />

    <Button
        android:id="@+id/btn_apagar_actMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_apagar" />

    <Button
        android:id="@+id/btn_sair_actMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_sair" />
</LinearLayout>
