<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.mateushideaki.videoaula.MainActivity">

    <TextView
        android:id="@+id/txtv_nome_actCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nome"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_nome_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtv_email_actCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_email"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_email_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtv_endereco_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_endereco"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_endereco_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtv_numero_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/str_numero" />

    <EditText
        android:id="@+id/txt_numero_actCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_cadastrar_actCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cadastrar" />


</LinearLayout>
